--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
                     <div class="col mb-5">
                         <div class="card h-100">
                             <!-- Product image-->
-                            <img class="card-img-top" src="assets/08.JFIF" alt="..." />
+                            <img class="card-img-top" src="assets/08.jfif" alt="..." />
                             <!-- Product details-->
                             <div class="card-body p-4">
                                 <div class="text-center">
